# rag-agent-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PHASE1_PROGRESS.md  QUICK_START.md  README.md  STREAMLIT_DEPLOYMENT.md  agent.py  alembic.ini  app.py  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt  setup.py  videos
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 6e3fafd3bae8_initial_migration.py
data/documents/: ai_technology.txt  llamaindex_guide.txt  rag_system.txt
docs/: AGENT_ARCHITECTURE_README.md  API_DOCUMENTATION.md  DEPLOYMENT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PRODUCTION_LLM_EXPLAINED.md  PRODUCTION_READINESS_ASSESSMENT.md  RAG_PLATFORM_COMPARISON.md  README.md  TECHNICAL_WALKTHROUGH.md
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
monitoring/: prometheus.yml
scripts/: architecture_video_generator.py  rag_platform.py
src/: __init__.py  __main__.py
src/examples/: api_client_example.py  api_client_with_agent.py  api_server_enterprise.py
src/rag_agent/: __init__.py  api_server.py  caching.py  database.py  monitoring.py  security.py  vector_store.py  web_ui.py
src/rag_agent/agent_architecture/: advanced_agent.py  agent_example.py  specialized_agents.py
src/rag_agent/traditional_rag/: api_server_basic.py  main.py  simple_example.py  web_scraper_example.py
src/shared/: __init__.py  check_quota.py
tests/: conftest.py  test_api_key.py
tests/integration/: test_api_integration.py
tests/unit/: test_agent.py  test_api_server.py
